--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,9 @@
 <resources>
     <string name="app_name">BusinessQuotationApp</string>
     <string-array name="status_array">
-        <item>Mercury</item>
-        <item>Venus</item>
-        <item>Earth</item>
-        <item>Mars</item>
-        <item>Jupiter</item>
-        <item>Saturn</item>
-        <item>Uranus</item>
-        <item>Neptune</item>
+        <item>Draft</item>
+        <item>Sent</item>
+        <item>Accepted</item>
+        <item>Declined</item>
     </string-array>
 </resources>
