Implement search and some other minor adjustments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">BusinessQuotationApp</string>
     <string-array name="status_array">
+        <item>Uncategorized</item>
         <item>Draft</item>
         <item>Sent</item>
         <item>Accepted</item>
